build(vector): add debug compile flags

--- a/src/vector/Makefile
+++ b/src/vector/Makefile
@@ -1,6 +1,6 @@
 # === Compiler ===
 CC     = gcc
-CFLAGS = -Wall -Wextra -Wpedantic -std=c99
+CFLAGS = -g -O0 -fsanitize=address -Wall -Wextra -Wpedantic -std=c99
 
 DEBUG_FLAGS   = -g -O0 -fsanitize=address
 RELEASE_FLAGS = -O2
