style, refactor(llist, dlist): rename list and two_way_list, start refactor dlist
Style:
-list, two_way_list: rename in llist and dlist

--- a/test/llist/Makefile
+++ b/test/llist/Makefile
@@ -5,29 +5,29 @@ CFLAGS = -g -O0 -fsanitize=address -Wall -Wextra -Wpedantic -std=c99
 # === Paths ===
 
 INCLUDE         = ../../include
-LIST_BIN_DIR     = ../../bin/list
+LIST_BIN_DIR     = ../../bin/llist
 BUILD_DIR       = ../../build
-LIST_LIB_DIR     = $(BUILD_DIR)/list
+LIST_LIB_DIR     = $(BUILD_DIR)/llist
 UNITY_LIB_DIR   = $(BUILD_DIR)/unity
 
-LIST_LIB   = $(LIST_LIB_DIR)/liblist.a
+LIST_LIB   = $(LIST_LIB_DIR)/libllist.a
 UNITY_LIB = $(UNITY_LIB_DIR)/libunity.a 
 
-LIST_TEST_SRC = test_list.c
-LIST_TEST_OBJ = test_list.o
+LIST_TEST_SRC = test_llist.c
+LIST_TEST_OBJ = test_llist.o
 
-LIST_TEST_BIN = $(LIST_BIN_DIR)/test_list
+LIST_TEST_BIN = $(LIST_BIN_DIR)/test_llist
 
 # === Targets ===
 
-.PHONY: ltest
+.PHONY: lltest
 
-ltest: $(LIST_TEST_BIN)
+lltest: $(LIST_TEST_BIN)
 
 # === Build rules ===
 
 $(LIST_TEST_BIN): $(LIST_TEST_OBJ)
-	$(CC) $(CFLAGS) $< -o $@ -L$(LIST_LIB_DIR) -llist -L$(UNITY_LIB_DIR) -lunity
+	$(CC) $(CFLAGS) $< -o $@ -L$(LIST_LIB_DIR) -lllist -L$(UNITY_LIB_DIR) -lunity
 	rm $(LIST_TEST_OBJ)
 
 $(LIST_TEST_OBJ) : $(LIST_TEST_SRC) $(LIST_BIN_DIR)
