--- a/src/container/vector/Makefile
+++ b/src/container/vector/Makefile
@@ -2,9 +2,6 @@
 CC     = gcc
 CFLAGS = -g -O0 -fsanitize=address -Wall -Wextra -Wpedantic -std=c99
 
-DEBUG_FLAGS   = -g -O0 -fsanitize=address
-RELEASE_FLAGS = -O2
-
 # === Paths ===
 
 BUILD_PATH  = ../../../build/vector
@@ -14,16 +11,13 @@ VEC_OBJ     = $(BUILD_PATH)/libvector.o
 VEC_TARGET  = $(BUILD_PATH)/libvector.a
 
 # ===Targets===
-.PHONY: vector install uninstall clean
+.PHONY: vector install uninstall
 
 vector: $(VEC_TARGET) 
 
 install:
 
 uninstall:
-
-clean :
-	rm -rf $(BUILD_PATH)/*
 
 # ===Build rules===
 
